@startuml "Domain class diagram"
!theme plain
hide empty fields
hide circles
left to right direction

skinparam class {
  BorderColor Black
  BackgroundColor #f8f8f8
}
skinparam linetype ortho
skinparam nodesep 65
skinparam ranksep 55
skinparam packageStyle rectangle
skinparam ArrowThickness 1
skinparam NoteBackgroundColor #fffdf2
skinparam NoteBorderColor #b9b9b9

' Domain enums used by business rules
enum PostStatus {
  DRAFT
  PUBLISHED
  ARCHIVED
}

enum VotingStatus {
  DRAFT
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

enum VoteOption {
  YES
  NO
  ABSTAIN
}

package "Core ORM" {
  class ActiveModel {
    +validate()
    +save()
    +create()
    +update()
    +destroy()
    +getDbAttributes(): array
    +humanAttributeName(attribute: string): string
  }

  class ApplicationRecord {
  }

  class QueryBuilder {
    +where(conditions: array|string, value: mixed = null): self
    +whereNot(conditions: array|string, value: mixed = null): self
    +orderBy(column: string, direction: string): self
    +limit(limit: int): self
    +offset(offset: int): self
    +get(): Collection
    +all(): Collection
    +first(): ?object
    +find(id: int|string): ?object
    +count(): int
    +exists(): bool
    +pluck(column: string|array): array
  }

  class Collection {
    -items: array
    +first(): ?object
    +last(): ?object
    +isEmpty(): bool
    +isNotEmpty(): bool
    +count(): int
    +map(callback: callable): self
    +filter(callback: callable): self
    +find(callback: callable): ?object
    +pluck(attribute: string): array
    +toArray(): array
    +each(callback: callable): self
  }
}

package "Domain" as DomainPkg {
  interface Attachable
  interface Commentable

  class User {
    +AVAILABLE_ROLES: array
    +{static} withAnyRole(): QueryBuilder
  }

  class Post {
    +{static} publiclyVisible(): QueryBuilder
  }

  class Event {
    +#{validate_datetime_range}(): array
  }

  class Voting {
    +hasUserVoted(userId: int): bool
    +#{validate_status_lifecycle}(): array
    +#{isTransitioningToStatus}(status: string): bool
    +#{hasAtLeastOneQuestion}(): bool
    +#{hasReachedStartDatetime}(): bool
  }

  class Question {
  }

  class UsersQuestion {
  }

  class Attachment {
  }

  class Comment {
  }
}

' Layout hints for a wider, less cramped view
User -[hidden]- Post
Post -[hidden]- Event
Event -[hidden]- Voting
Question -[hidden]- UsersQuestion

' Keep interfaces in a dedicated right lane and away from voting/question flow
Voting -[hidden]- Attachable
Attachable -[hidden]- Commentable
Attachable -[hidden]- Attachment
Commentable -[hidden]- Comment
Attachment -[hidden]- Comment

' Inheritance from the common ORM/domain base
ActiveModel <|-- ApplicationRecord
ApplicationRecord ..> DomainPkg : inherited by domain models

' Core ownership and composition
User "1" -up-> "0..*" Post : creates
User "1" -> "0..*" Event : creates
User "1" -down-> "0..*" Voting : creates

Voting "1" -down-> "0..*" Question : contains
Question "1" -down-> "0..*" UsersQuestion : receives answers
User "1" -right-> "0..*" UsersQuestion : submits answers


' Polymorphic resource interactions in business logic
Post ..|> Attachable
Event ..|> Attachable
Voting ..|> Attachable
Attachable "1" --> "0..*" Attachment : attachments

Post ..|> Commentable
Event ..|> Commentable
Voting ..|> Commentable
Commentable "1" --> "0..*" Comment : comments
Comment "0..1" --> "0..*" Comment : replies-to

' State/value usage links
Post --> PostStatus : uses
Voting --> VotingStatus : uses
UsersQuestion --> VoteOption : uses

note right of Voting
  Voting business rule:
  hasUserVoted(userId)
  checks if at least one
  answer exists for this voting.
end note

note left of UsersQuestion
  Domain invariant:
  one answer per
  user + question pair.
end note

note right of Attachment
  Attachment target is polymorphic
  via resource_type/resource_id.
end note

note left of Comment
  Comment target is polymorphic
  and comments can be threaded.
end note

note bottom of QueryBuilder
  Static query methods (where, all, find, etc.)
  return QueryBuilder or Collection for chaining.
  Accessible via Model::where(...) scopes.
end note

note bottom of ApplicationRecord
  All domain models inherit from ApplicationRecord
  which provides ORM capabilities: save(),
  validate(), create(), update(), destroy().
end note

@enduml
